--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "csv-writer": "^1.6.0",
     "puppeteer": "^21.7.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
